# dpdk

config/: meson.build
drivers/: meson.build
drivers/bus/pci/windows/: pci.c
drivers/mempool/: meson.build
lib/: meson.build
lib/librte_eal/windows/: eal_alarm.c  meson.build
lib/librte_eal/windows/include/: pthread.h  rte_os.h
